--- a/src/main/resources/templates/board/view.html
+++ b/src/main/resources/templates/board/view.html
@@ -447,7 +447,7 @@
     <div class="text-center">
       <div class="btn-group pt-5" role="group" aria-label="Basic example">
 <!--        <c:if test="${not empty sessionScope.u_id and sessionScope.u_id eq dto.u_id}">-->
-          <button type="button" id="modify-btn" class="btn btn-primary btn-sm" th:onclick="|location.href='@{/write?b_id={bId}(bId=${board.BId})}'|">수정</button>
+          <button type="button" id="modify-btn" class="btn btn-primary btn-sm" th:onclick="|location.href='@{/write(id=${board.BId})}'|">수정</button>
           <button type="button" id="delete-btn" class="btn btn-primary btn-sm">삭제</button>
 <!--        </c:if>-->
 
