--- a/src/main/resources/templates/board/write.html
+++ b/src/main/resources/templates/board/write.html
@@ -71,10 +71,11 @@
         <div class="form-group row">
             <label class="col-sm-2 col-form-label">작성자</label>
             <div class="col-sm-10">
+                <input type="text" id="u_id" name="u_id" class="form-control form-control-sm" th:value="${board.userId}" />
                 <input type="text" id="u_name" name="u_name" class="form-control form-control-sm" th:value="${board.userName}" />
             </div>
         </div>
-        +
+
         <div class="form-group row">
             <label class="col-sm-2 col-form-label">제목</label>
             <div class="col-sm-10">
