index페이지 > city 링크

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -69,7 +69,7 @@
 
                 <h1 class="mb-5 sec2h2">이번 여행은 <br>어디로 <br>갈까요?</h1>
                 <div class="col">
-                    <a href="../../info/city.do?area=1">
+                    <a href="../../info/city/1">
                         <div class="card border-0">
                             <img src="assets/img/mainimg/seoul2.jpg" class="card-img-top rounded" alt="서울">
                             <div class="card-img-overlay cardgradient">
@@ -80,7 +80,7 @@
                 </div>
 
                 <div class="col">
-                    <a href="../../info/city.do?area=6">
+                    <a href="../../info/city/6">
                         <div class="card border-0">
                             <img src="assets/img/mainimg/busan.png" class="card-img-top rounded" alt="부산">
                             <div class="card-img-overlay cardgradient">
@@ -91,7 +91,7 @@
                 </div>
 
                 <div class="col">
-                    <a href="../../info/city.do?area=39">
+                    <a href="../../info/city/39">
                         <div class="card border-0">
                             <img src="assets/img/mainimg/jeju.jpg" class="card-img-top rounded" alt="제주">
                             <div class="card-img-overlay cardgradient">
@@ -102,7 +102,7 @@
                 </div>
 
                 <div class="col">
-                    <a href="../../info/city.do?area=3">
+                    <a href="../../info/city/3">
                         <div class="card border-0">
                             <img src="assets/img/mainimg/daejeon.jpg" class="card-img-top rounded" alt="대전">
                             <div class="card-img-overlay cardgradient">
@@ -113,7 +113,7 @@
                 </div>
 
                 <div class="col">
-                    <a href="../../info/city.do?area=4">
+                    <a href="../../info/city/4">
                         <div class="card border-0">
                             <img src="assets/img/mainimg/daegu.png" class="card-img-top rounded" alt="대구">
                             <div class="card-img-overlay cardgradient">
@@ -124,7 +124,7 @@
                 </div>
 
                 <div class="col">
-                    <a href="../../info/city.do?area=9">
+                    <a href="../../info/city/9">
                         <div class="card border-0">
                             <img src="assets/img/mainimg/kunggi.jpg" class="card-img-top rounded" alt="경기도 수원">
                             <div class="card-img-overlay cardgradient">
@@ -135,7 +135,7 @@
                 </div>
 
                 <div class="col">
-                    <a href="../../info/city.do?area=5">
+                    <a href="../../info/city/5">
                         <div class="card border-0">
                             <img src="assets/img/mainimg/gwangju.jpg" class="card-img-top rounded" alt="광주">
                             <div class="card-img-overlay cardgradient">
@@ -151,7 +151,7 @@
             <div class = "invisiblecard">
                 <div class="row row-cols-1 row-cols-md-4 g-4 pt-4">
                     <div class="col">
-                        <a href="../../info/city.do?area=32">
+                        <a href="../../info/city/32">
                             <div class="card border-0 ">
                                 <img src="assets/img/mainimg/gangwon.jpg" class="card-img-top rounded" alt="강원도">
                                 <div class="card-img-overlay cardgradient">
@@ -164,7 +164,7 @@
 
 
                     <div class="col">
-                        <a href="../../info/city.do?area=7">
+                        <a href="../../info/city/7">
                             <div class="card border-0 ">
                                 <img src="assets/img/mainimg/ulsan.jpg" width="100%" class="card-img-top rounded" alt="울산">
                                 <div class="card-img-overlay cardgradient">
@@ -175,7 +175,7 @@
                     </div>
 
                     <div class="col">
-                        <a href="../../info/city.do?area=2">
+                        <a href="../../info/city/2">
                             <div class="card border-0 ">
                                 <img src="assets/img/mainimg/incheon.jpg" class="card-img-top rounded" alt="인천">
                                 <div class="card-img-overlay cardgradient">
@@ -186,7 +186,7 @@
                     </div>
 
                     <div class="col">
-                        <a href="../../info/city.do?area=8">
+                        <a href="../../info/city/8">
                             <div class="card border-0 ">
                                 <img src="assets/img/mainimg/sejong.png" class="card-img-top rounded" alt="세종">
                                 <div class="card-img-overlay cardgradient">
@@ -197,7 +197,7 @@
                     </div>
 
                     <div class="col">
-                        <a href="../../info/city.do?area=33">
+                        <a href="../../info/city/33">
                             <div class="card border-0 ">
                                 <img src="assets/img/mainimg/chungbuk.jpg" class="card-img-top rounded" alt="충북">
                                 <div class="card-img-overlay cardgradient">
@@ -208,7 +208,7 @@
                     </div>
 
                     <div class="col">
-                        <a href="../../info/city.do?area=34">
+                        <a href="../../info/city/34">
                             <div class="card border-0 ">
                                 <img src="assets/img/mainimg/chungnam.jpg" class="card-img-top rounded" alt="충남">
                                 <div class="card-img-overlay cardgradient">
@@ -219,7 +219,7 @@
                     </div>
 
                     <div class="col">
-                        <a href="../../info/city.do?area=35">
+                        <a href="../../info/city/35">
                             <div class="card border-0 ">
                                 <img src="assets/img/mainimg/kyungbuk.jpg" class="card-img-top rounded" alt="경북">
                                 <div class="card-img-overlay cardgradient">
@@ -230,7 +230,7 @@
                     </div>
 
                     <div class="col">
-                        <a href="../../info/city.do?area=36">
+                        <a href="../../info/city/36">
                             <div class="card border-0 " >
                                 <img src="assets/img/mainimg/kyungnam.jpg" class="card-img-top rounded" alt="경남">
                                 <div class="card-img-overlay cardgradient">
@@ -241,7 +241,7 @@
                     </div>
 
                     <div class="col">
-                        <a href="../../info/city.do?area=37">
+                        <a href="../../info/city/37">
                             <div class="card border-0 ">
                                 <img src="assets/img/mainimg/jeonrabukdo.jpg" class="card-img-top rounded" alt="전북">
                                 <div class="card-img-overlay cardgradient">
@@ -252,7 +252,7 @@
                     </div>
 
                     <div class="col">
-                        <a href="../../info/city.do?area=38">
+                        <a href="../../info/city/38">
                             <div class="card border-0 ">
                                 <img src="assets/img/mainimg/jeonranamdo.jpg" class="card-img-top rounded" alt="전남">
                                 <div class="card-img-overlay cardgradient">
